fix: text align center for error message in query

--- a/src/styles/pages/QueriesPage.scss
+++ b/src/styles/pages/QueriesPage.scss
@@ -337,6 +337,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      text-align: center;
       .execution-error {
         font-weight: 700;
         font-size: 18px;
